@@ -60,8 +60,8 @@ void AboutQ5::setupLayout()
 	QLabel *lab5  = new QLabel(tr("This program is distributed in the hope that it will be useful,"));
 	QLabel *lab6  = new QLabel(tr("but WITHOUT ANY WARRANTY; without even the implied warranty of"));
 	QLabel *lab7  = new QLabel(tr("MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE."));
-	QLabel *lab8  = new QLabel(tr("This program has been developed exclusively for the analysis of model aircraft"));
-	QLabel *lab9  = new QLabel(tr("Any other usage is expressly prohibited"));
+//	QLabel *lab8  = new QLabel(tr("This program has been developed exclusively for the analysis of model aircraft"));
+//	QLabel *lab9  = new QLabel(tr("Any other usage is expressly prohibited"));
 	QLabel *lab10 = new QLabel(tr("Program distributed  under the terms of the GNU General Public License"));
 	QLabel *lab11 = new QLabel(tr("German translation by Martin Willner"));
 	QLabel *lab12 = new QLabel(tr("Japanese translation by IKUSU, Koichi Akabe, Misatus, dynamicsoar, hide253"));
@@ -95,8 +95,8 @@ void AboutQ5::setupLayout()
 		pMainLayout->addWidget(lab6);
 		pMainLayout->addWidget(lab7);
 		pMainLayout->addStretch(1);
-		pMainLayout->addWidget(lab8);
-		pMainLayout->addWidget(lab9);
+//		pMainLayout->addWidget(lab8);
+//		pMainLayout->addWidget(lab9);
 		pMainLayout->addStretch(1);
 		pMainLayout->addWidget(lab10);
 		pMainLayout->addStretch(1);
